integration_tests/codegen_fail/fail/object/impl_argument_no_object.rs
#[derive(juniper::GraphQLObject)]
struct Obj {
    field: String,
}

struct Object {}

#[juniper::graphql_object]
impl Object {
    fn test(&self, test: Obj) -> String {
        String::new()
    }
}

fn main() {}
